--- a/Interfaz/Web/index.css
+++ b/Interfaz/Web/index.css
@@ -1,11 +1,19 @@
+*{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 1em;
+}
+
 
 body{
+    display: flex;
     text-decoration: none;
     list-style: none;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+    flex-direction: column;
+    align-items: center;
 }
 
 nav {
@@ -22,6 +30,12 @@ nav a{
     color: white;
     font-weight: bold;
 }
+
+.front_banner {
+    justify-content: center;
+    overflow: hidden;
+}
+
 img {
     width: 100%;
     height: auto;
@@ -62,4 +76,36 @@ img {
 
 main {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 95vw;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
+
+h2 {
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+.servicios {
+    display: flex;
+
+}
+
+.servicios section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0.5em;
+}
+
+#icon_circle {
+    display: flex;
+    background-color: #b5e4f7;
+    border-radius: 16rem;
+    height: 150px;
+    width: 150px;
+    align-items: center;
+    justify-content: center;
 }
