--- a/Interfaz/Web/index.css
+++ b/Interfaz/Web/index.css
@@ -14,6 +14,15 @@ body{
     padding: 0;
     flex-direction: column;
     align-items: center;
+    background-color: #E4EBF3;
+}
+
+header {
+    width: 100%;
+    height: fit-content;
+    padding-bottom: 2em;
+    margin-bottom: 1em;
+    background-color: white;
 }
 
 nav {
@@ -21,24 +30,28 @@ nav {
     display: flex;
     justify-content: space-around;
     font-weight: bold;
-    padding: 0.5em;
-    max-height: 1em;
+    width: 100%;
+    height: fit-content;
 }
 
 nav a{
     text-decoration: none;
     color: white;
     font-weight: bold;
+    padding: 0.5em;
 }
 
 .front_banner {
     justify-content: center;
     overflow: hidden;
+    width: 100%;
 }
 
 img {
     width: 100%;
-    height: auto;
+    height: 30em;
+    object-fit: cover;
+    object-position: bottom;
     opacity: 60%;
 }
 #img_head {
@@ -59,6 +72,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     justify-content: flex-end;
 }
 #location{
@@ -69,9 +83,15 @@ img {
 .button{
     background-color: #0564a4;
     padding: .5em;
+    border: none;
+    border-radius: 5px;
     color: white;
     font-weight: bold;
     text-decoration: none;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 main {
@@ -81,6 +101,9 @@ main {
     align-items: center;
     width: 95vw;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+    background-color: white;
+    border-radius: 12px;
+    padding: 1em;
 }
 
 h2 {
@@ -97,7 +120,17 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     margin: 0.5em;
+}
+
+.servicios p {
+    line-height: 2;
+}
+
+.servicios h3 {
+    color: #4699D0;
+    font-weight: 400;
 }
 
 #icon_circle {
@@ -108,4 +141,170 @@ h2 {
     width: 150px;
     align-items: center;
     justify-content: center;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact form {
+    padding: 1em;
+    margin: 1em;
+    margin-top: 0;
+    background-color: #757575;
+    border-radius: 12px;
+
+}
+fieldset{
+    border: none;
+}
+
+legend {
+    text-align: center;
+    color: #b5e4f7;
+    text-transform: uppercase;
+}
+
+.contenedor-campos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto 1fr 2fr;
+    column-gap: 10px;
+}
+
+.campo label {
+    color: white;
+    display: block; 
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem; 
+}
+
+.campo {
+    width: 100%;
+}
+
+#campo3 {
+    grid-column: span 2;
+
+}
+
+#campo4 {
+    grid-column: span 2;
+}
+
+.input-text {
+    background-color: white;
+    color: #757575;
+    width: 100%; 
+    padding: 10px; 
+    box-sizing: border-box; 
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: vertical; 
+}
+
+textarea {
+    min-height: 10em;
+}
+
+.alinear-derecha {
+    padding-top: 1em;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.boton{
+    background-color: #0564a4;
+    padding: .6em;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.boton:hover {
+    cursor: pointer;
+}
+
+footer {
+    padding: 0.5em;
+}
+
+/* Media query para móviles*/
+@media (max-width: 768px) {
+
+    header {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        padding-bottom: 1em;
+    }
+
+
+    nav {
+        width: 100%;
+        flex-direction: column; 
+        align-items: center;
+    }
+
+    nav a {
+        padding: 0;
+        padding-top: 0.8em;
+        padding-bottom: 0.8em;
+        display: block;
+        width: 100%; 
+        text-align: center;
+    }
+    
+    #head_text {
+        padding: 0;
+        margin: 0;
+    }
+
+    .front_banner {
+        align-items: center;
+    }
+
+
+    main {
+        width: 100%; 
+        box-shadow: none; 
+        border-radius: 0; 
+    }
+
+
+    .servicios {
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    #icon_circle {
+        height: 100px;
+        width: 100px;
+    }
+
+
+    .contenedor-campos {
+        grid-template-columns: 1fr; 
+        grid-template-rows: auto;
+        row-gap: 15px; 
+    }
+
+    #campo3, #campo4 {
+        grid-column: span 1;
+    }
+
+    .alinear-derecha {
+        justify-content: center; 
+    }
+
+    .boton {
+        width: 100%;
+    }
 }
