--- a/Interfaz/practica5 SASS/css/style.css
+++ b/Interfaz/practica5 SASS/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito:300,400,700");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -309,187 +308,70 @@ template {
   display: none;
 }
 
-/* ESTILOS GLOBALES ***************************************************************************************************/
-html {
-  max-width: 1400px;
-  margin: 0 auto;
-}
-
-body {
-  font: 400 1rem "Nunito", sans-serif;
-  color: rgb(30, 30, 30);
-  margin: 0.5em;
-}
-body h1 {
-  font: 700 300% "Nunito", sans-serif;
-  margin: 0;
-}
-body h2 {
-  font: 700 200% "Nunito", sans-serif;
-  margin: 0;
-}
-body h3 {
-  font: 700 150% "Nunito", sans-serif;
-  margin: 0;
-}
-
-@media (max-width: 768px) {
-  body {
-    margin: 0;
-  }
-}
-a {
+header * {
   text-decoration: none;
-  color: rgb(30, 30, 30);
-}
-
-/* HEADER *************************************************************************************************************/
-header {
-  text-align: center;
-  background-color: #eee;
-  padding: 0.5em;
 }
 header img {
   width: 10%;
   float: left;
 }
 header h1 {
-  width: 90%;
-  color: rgb(115, 0, 0);
+  font-size: 2.5rem;
+  color: #d577a3;
 }
 header h2 {
+  font-size: 1.5rem;
   width: 90%;
-  color: rgb(0, 50, 0);
+  color: #d577a3;
 }
-@media (max-width: 768px) {
-  header img {
-    width: 5em;
-    float: none;
-  }
-  header h1,
-  header h2 {
-    float: none;
-    width: 100%;
-  }
-}
-
-/* NAV ****************************************************************************************************************/
-nav {
-  background-color: #eee;
-  padding: 0.1em;
-  margin: 0.5em 0 0 0;
+header .nav {
+  background-color: rgb(253, 225, 235);
+  padding: 1rem;
+  width: 100%;
   text-align: center;
-  text-transform: uppercase;
 }
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+header .nav a {
+  color: #d577a3;
+  background-color: white;
+  padding: 0.5rem;
 }
-nav ul li {
-  display: inline-block;
-  margin: 0;
-  padding: 0.2em;
-  font: 700 110% "Nunito", sans-serif;
-}
-nav ul a {
-  font-weight: 400;
-}
-nav ul a:hover {
-  text-decoration: underline;
-  font-weight: 700;
+header .nav div :hover {
+  color: black;
 }
 
-@media (max-width: 768px) {
-  nav {
-    margin: 0;
-  }
-  ul li {
-    width: 100%;
-  }
-}
-/* SECTION ************************************************************************************************************/
-section {
-  margin: 0.5em 0 0 0;
-}
 section article {
   width: 33%;
-  display: inline-block;
   min-height: 16em;
 }
 section article img {
   width: 25%;
-  float: left;
   padding: 0 1em 0 0;
 }
 section article div {
   width: 65%;
-  float: left;
   padding: 1em 1em 0 0;
 }
-section article:nth-child(1) {
-  background-color: rgba(113, 1, 50, 0.5);
-}
-section article:nth-child(2) {
-  background-color: rgba(206, 74, 20, 0.5);
-}
-section article:nth-child(3) {
-  background-color: rgba(10, 190, 102, 0.5);
-}
-section article:nth-child(4) {
-  background-color: rgba(15, 21, 6, 0.5);
-}
-section article:nth-child(5) {
-  background-color: rgba(200, 187, 177, 0.5);
-}
-section article:nth-child(6) {
-  background-color: rgba(150, 237, 98, 0.5);
-}
-@media (max-width: 992px) {
-  section article {
-    width: 49.7%;
-  }
-}
-@media (max-width: 768px) {
-  section article {
-    width: 100%;
-    display: block;
-  }
+
+.bg-l-blue {
+  background-color: rgb(114, 235, 207);
 }
 
-@media (max-width: 768px) {
-  section {
-    margin: 0;
-  }
-}
-/* FOOTER *************************************************************************************************************/
-footer {
-  margin: 0.5em 0 0 0;
-  text-align: center;
-}
-footer div {
-  background-color: #eee;
-  padding: 0.2em 0 0 0;
-}
-footer div img {
-  width: 3em;
-}
-footer p {
-  margin: 0.5em 0 0 0;
-  background-color: #eee;
-  padding: 0.1em 0;
-  font: 300 80% "Nunito", sans-serif;
-}
-footer p a:hover {
-  text-decoration: underline;
-  font-weight: 700;
+.bg-blue {
+  background-color: rgb(150, 216, 255);
 }
 
-@media (max-width: 768px) {
-  footer {
-    margin: 0;
-  }
-  footer p {
-    margin: 0;
-  }
+.bg-violet {
+  background-color: rgb(235, 114, 231);
+}
+
+.bg-red {
+  background-color: rgb(255, 124, 124);
+}
+
+.bg-grey {
+  background-color: rgb(193, 193, 193);
+}
+
+.bg-gold {
+  background-color: rgb(255, 172, 86);
 }/*# sourceMappingURL=style.css.map */
