--- a/Interfaz/practica5 SASS/css/style.scss
+++ b/Interfaz/practica5 SASS/css/style.scss
@@ -79,3 +79,71 @@ section {
 .bg-gold{
     background-color: $background-gold;
 }
+
+// Añadido de paleta
+
+$colors: (
+    "deep-sky-blue": #00BFFF,
+    "medium-sea-green": #3CB371,
+    "tomato": #FF6347,
+    "gold": #FFD700
+);
+
+.color-info {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    article {
+        flex: 1 1 calc(25% - 2rem);
+        text-align: center;
+        h3 {
+            font-size: 1.2rem;
+            margin-bottom: 0.5rem;
+        }
+        .color {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto;
+            border: 1px solid #000;
+        }
+    }
+}
+
+@each $name, $color in $colors {
+    .#{$name} {
+        background-color: $color;
+        width: 100px;
+        height: 100px;
+    }
+
+    .#{$name} + .color-info-text {
+        margin-top: 0.5rem;
+        font-size: 0.9rem;
+        text-align: center;
+
+        &:before {
+            content: "Nombre: #{$name}\A Color HEX: #{inspect($color)}\A Color RGB: #{red($color)}, #{green($color)}, #{blue($color)}\A Color HSL: #{round(hue($color))}, #{round(saturation($color))}%, #{round(lightness($color))}%";
+            white-space: pre-line;
+            display: block;
+        }
+    }
+
+    // Tonalidades
+    .#{$name}-light {
+        background-color: lighten($color, 25%);
+        width: 80px;
+        height: 80px;
+    }
+
+    .#{$name}-dark {
+        background-color: darken($color, 25%);
+        width: 80px;
+        height: 80px;
+    }
+}
+
+.tone {
+    border: 1px solid #000;
+    margin: 0;
+    padding: 0;
+}
